<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/label_welcome"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"></TextView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/btn_create_appointment"
            android:drawableLeft="@drawable/ic_add_note"
            style="@style/MenuButton"></Button>

        <Button
            android:id="@+id/btnMyAppointments"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/btn_my_appointments"
            android:drawableLeft="@drawable/ic_schedule"
            style="@style/MenuButton"></Button>

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/btn_log_out"
            android:drawableStart="@drawable/ic_power_off"
            style="@style/MenuButton"
            android:drawableLeft="@drawable/ic_power_off"></Button>

    </LinearLayout>

</LinearLayout>