<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStep2"
    android:visibility="gone"
    tools:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp"
    tools:context=".ui.CreatAppointmentActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_doctor"></TextView>
            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_schedule_date"></TextView>
            <EditText
                android:id="@+id/etScheduleDate"
                android:onClick="onclickScheduleDate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
            <TextView
                android:id="@+id/tvSelectDoctorAndDate"
                android:layout_margin="6dp"
                android:textColor="@color/colorAccent"
                android:text="@string/label_select_doctor_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/tvNotAvailableHours"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="6dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/label_not_available_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/radioGroupLeft"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"></RadioButton>
                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM"></RadioButton>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/radioGroupRight"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM"></RadioButton>
                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM"></RadioButton>

                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btnNext2"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/btn_next"
                android:drawableLeft="@drawable/ic_next"
                style="@style/MenuButton"></Button>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.cardview.widget.CardView>
